# examples

bevy-game/: CLAUDE.md  Cargo.toml  README.md
bevy-game/ctx/: README.md
bevy-game/ctx/plan/: 20250705_automated_test_coverage_plan.md
bevy-game/ctx/worklog/: 20250705_automated_test_implementation_progress.md
bevy-game/ext/: README.md
bevy-game/src/: main.rs
bevy-game/src/tests/: crypto.rs  focus.rs  mod.rs  test_utils.rs  validation.rs
bevy-game/tests/: integration_test.rs
dapp-template/: QUICKSTART.md  README.md
dapp-template/src/: App.vue  env.d.ts
dapp-template/src/components/: Balance.vue  BurnGala.vue  PixelBoard.vue  TransferGala.vue
tic-tac-contract/: CLAUDE.md
tic-tac-contract/client/: package-lock.json  package.json  typedoc.json  vite.config.ts
tic-tac-contract/client/src/: connect.ts  game.ts
tic-tac-contract/client/tests/: App.test.ts  TicTacGame.test.ts  connect.test.ts  setup.ts
tic-tac-contract/server/: jest.config.js  package-lock.json  package.json  typedoc.json
tic-tac-contract/server/src/: chainstore.ts  identities.ts
tic-tac-contract/server/tests/: chainstore.test.ts  setup.ts
tic-tac-contract/tictac-chaincode/: package-lock.json  package.json  typedoc.json
token-sale/: .gitignore  README.md  index.html  package-lock.json  package.json
token-sale/src/: App.vue  main.ts
token-sale/src/assets/: base.css  main.css
token-sale/src/components/icons/: Logo.vue
token-sale/src/composables/: connect.ts
token-sale/src/router/: index.ts
token-sale/src/stores/: user.ts
token-sale/src/views/: home.vue  sale.vue
(+6 files in other folders)
