[package]
name = "bevy-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
secp256k1 = { version = "0.27.0", features = ["rand"] }
bip39 = "2.0.0"
rand = "0.8.5"
hex = "0.4.3"
sha3 = "0.10.8"

# Secure storage - production keychain integration
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
# TODO: Add secure memory protection later
# secrets = "1.2"

# HTTP client for GalaChain API
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
